--- a/src/renderer/game/index.html
+++ b/src/renderer/game/index.html
@@ -7,7 +7,7 @@
     href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.css"
   >
   <link href="https://fonts.googleapis.com/css?family=Roboto:400,500" rel="stylesheet" >
-  <link rel="stylesheet" type="text/css" href="../_shared/default.css" >
+  <link rel="stylesheet" type="text/css" href="../_shared/assets/css/default.css" >
 </head>
 <body>
 <div id="app"></div>
