--- a/src/renderer/main/index.html
+++ b/src/renderer/main/index.html
@@ -1,13 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Electron ES6 React - Main</title>
-  <link
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.css"
-  >
-  <link href="https://fonts.googleapis.com/css?family=Roboto:400,500" rel="stylesheet" >
-  <link rel="stylesheet" type="text/css" href="../_shared/default.css" >
+  <title>Swords And Souls Bot</title>
+  <link rel="stylesheet" type="text/css" href="../_shared/assets/css/photon.css" >
 </head>
 <body>
 <div id="app"></div>
